--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vatratabaku/.github.io/resume-builder-app",
+  "homepage": "https://vatratabaku.github.io/resume-builder-app",
   "name": "resume-builder-app",
   "version": "0.1.0",
   "private": true,
